[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/actor1.png" type="Texture" id=1]
[ext_resource path="res://cleaner/player/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 94, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.375, 4.4375 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ClearArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_left"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ClearArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -120, -25 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "turn_right"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ClearArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -25 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -205 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -203 )
shape = SubResource( 1 )

[node name="ClearArea" type="Area2D" parent="."]
position = Vector2( 120, -25 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClearArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/turn_left = SubResource( 3 )
anims/turn_right = SubResource( 4 )

[connection signal="body_entered" from="ClearArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ClearArea" to="." method="_on_Area2D_body_exited"]
